--- a/Cryptocurrency Wallet/Base.lproj/Main.storyboard
+++ b/Cryptocurrency Wallet/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bbD-0n-Iqw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bbD-0n-Iqw">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -108,6 +108,64 @@
             </objects>
             <point key="canvasLocation" x="836" y="135.38230884557723"/>
         </scene>
+        <!--LoginVC-->
+        <scene sceneID="L2e-6j-4gc">
+            <objects>
+                <viewController id="4u2-hu-Nxq" customClass="CWLoginVC" customModule="Cryptocurrency_Wallet" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fJK-2X-EKR"/>
+                        <viewControllerLayoutGuide type="bottom" id="1Ia-Me-ng6"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GWa-zb-ZVu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="rLy-Rk-ucv">
+                                <rect key="frame" x="20" y="124" width="335" height="106"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SmQ-fs-EBL">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1bb-U1-V0r">
+                                        <rect key="frame" x="0.0" y="38" width="335" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cdz-fW-DTZ">
+                                        <rect key="frame" x="0.0" y="76" width="335" height="30"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="loginAction:" destination="4u2-hu-Nxq" eventType="touchUpInside" id="xMe-x0-r6C"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rLy-Rk-ucv" firstAttribute="leading" secondItem="GWa-zb-ZVu" secondAttribute="leading" constant="20" id="8az-PC-8fq"/>
+                            <constraint firstItem="rLy-Rk-ucv" firstAttribute="top" secondItem="fJK-2X-EKR" secondAttribute="bottom" constant="60" id="Ayy-Iz-5BA"/>
+                            <constraint firstAttribute="trailing" secondItem="rLy-Rk-ucv" secondAttribute="trailing" constant="20" id="IXo-O4-b2b"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="6Oc-Dz-lwf"/>
+                    <connections>
+                        <outlet property="emailTF" destination="SmQ-fs-EBL" id="QJc-m3-FMQ"/>
+                        <outlet property="loginBtn" destination="cdz-fW-DTZ" id="H2R-BA-4VZ"/>
+                        <outlet property="passwordTF" destination="1bb-U1-V0r" id="g34-e0-a6I"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ok-uH-LJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="836" y="788"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Hl7-c0-flP">
             <objects>
@@ -125,6 +183,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rVG-cz-bxx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="116" y="136"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ye4-VM-n2O">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RhI-qh-U15" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cPb-hZ-ouB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="4u2-hu-Nxq" kind="relationship" relationship="rootViewController" id="Y7d-cD-sLh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DWZ-RE-2DW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="116" y="788"/>
         </scene>
     </scenes>
 </document>
